# cxxrandom

./: .clang-tidy  .clang-tidy-noerrors  .gitignore  CMakeLists.txt  define.cmake
.github/workflows/: cmake-single-platform.yml
include/: CMakeLists.txt  cxxrandom.hpp  cxxrandom_version_info.hpp
scripts/: gen_version_info_cpp.sh
src/: CMakeLists.txt  basic.cpp  dice.cpp  random_device.cpp  random_device.hpp  string.cpp
test/: CMakeLists.txt  test_ascii_string_0.cpp  test_ascii_string_1.cpp  test_basic_double_0.cpp  test_basic_double_1.cpp  test_basic_float_0.cpp  test_basic_float_1.cpp  test_basic_signed_0.cpp  test_basic_signed_1.cpp  test_basic_unsigned_0.cpp  test_basic_unsigned_1.cpp  test_throw_custom_dice_0.cpp  test_throw_custom_dice_1.cpp  test_throw_custom_dice_2.cpp  test_throw_custom_dice_3.cpp  test_throw_custom_dice_4.cpp  test_throw_dice_0.cpp  test_throw_dice_1.cpp  test_throw_dice_2.cpp  test_throw_dice_3.cpp  test_throw_dice_4.cpp  test_throw_dice_5.cpp
